# enviroplusmonitor

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
enviroplusmonitor/: enviroplusmonitor.py
enviroplusmonitor/classes/: bme280Measurement.py  bme280MeasurementPayload.py  configPayload.py  measurementRecord.py  mics6814MeasurementPayload.py  sensorRecord.py
enviroplusmonitor/sensors/: dht22.py  dht22_measurement.py  gas.py  weather.py
enviroplusmonitor/utilities/: configurationhandler.py  homeassistanthandler.py  influxdbclienthandler.py  jobhandler.py  logginghandler.py  mqttclienthandler.py  schemahandler.py  unitregistryhandler.py
resources/: config-example.ini  default_en.txt  logging.json
tests/: test_enviroplusmonitor.py
