[tool.poetry]
name = "enviroplusmonitor"
version = "0.1.0"
description = "Publish readings from an enviro+ pHat over MQTT"
authors = ["Philip Cutler <greenthegarden@gmail.com>"]
maintainers = ["Philip Cutler <greenthegarden@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/greenthegarden/enviroplus-monitor"
documentation = "https://hackersandslackers.com/python-poetry/"
keywords = ["Enviro+",
            "Environment",
            "Monitoring",
            "MQTT"]

[tool.poetry.dependencies]
python = "^3.8"
configobj = "*"
paho-mqtt = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "enviroplusmonitor:main"

[tool.poetry.urls]
issues = "https://github.com/greenthegarden/enviroplus-monitor/issues"
